--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.3",
+    "crypto-js": "^3.1.5",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.0.5",
     "sequelize": "^3.5.1",
     "sqlite3": "^3.1.3",
     "underscore": "^1.8.3"
